# indian-property-drafting-mcpb

./: README.md  SECURITY.md  manifest.json  pyproject.toml
SAMPLE-CASES/: README.md
SAMPLE-CASES/synthetic-partition-deed-co-owners/: 01-drafting-instructions-partition-deed.docx  02-schedule-of-properties.docx  case-facts-background.md
agents/drafter/: drafter.md
agents/format/: format.md
agents/overseer/: overseer.md
agents/reader/: reader.md
agents/refiner/: refiner.md
agents/verifier/: verifier.md
server/: main.py
skills/_drafting_common/: SKILL.md
skills/_property_drafting_base/: SKILL.md  build_reference_docx.py  reference.docx
skills/easement-deed-draft/: SKILL.md
skills/exchange-deed-draft/: SKILL.md
skills/gift-deed-draft/: SKILL.md
skills/mortgage-deed-draft/: SKILL.md
skills/partition-deed-draft/: SKILL.md
skills/private-trust-deed-draft/: SKILL.md
skills/release-deed-draft/: SKILL.md
skills/settlement-deed-draft/: SKILL.md
skills/title-investigation-report-draft/: SKILL.md
skills/wakf-deed-draft/: SKILL.md
state-config/exemplars/: delhi.md  gujarat.md  karnataka.md  maharashtra.md  tamil-nadu.md  telangana.md  uttar-pradesh.md  west-bengal.md
