[project]
name = "wolfgang-indian-property-drafting"
version = "0.1.2"
description = "MCPB Desktop Extension for Indian property drafting."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Wolfgang Rush", email = "wolfgangrush@gmail.com" }]
dependencies = ["mcp[cli]>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
